# SwitchLifeManager

./: .gitignore  Cargo.lock.old  Cargo.toml  README.md  package-lock.json  package.json
.github/: CODEOWNER  CODEOWNERS
.github/workflows/: release.yml
docs/: architecture.md  design_data_persistence.md  design_obs_integration.md  implementation_plan_persistence.md  migration_plan_tauri.md  roadmap_dp_support.md  tasks.md
src/: main.rs
src-old/: main.rs
src-old/domain/: presets.rs
src-old/infrastructure/: input_source.rs  process_monitor.rs  timer.rs
src-old/usecase/: input_monitor.rs  tests_monitor.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  logging.rs  main.rs  tray.rs
src-tauri/src/domain/: interfaces.rs  mod.rs  models.rs  repositories.rs
src-tauri/src/domain/models/: button_map.rs  config.rs  logical_key.rs  mod.rs  profile.rs  session.rs  switch.rs
src-tauri/src/infrastructure/: database.rs  input_source.rs  mod.rs  obs_server.rs  persistence.rs  process_monitor.rs
src-tauri/src/infrastructure/input_source/: gilrs_source.rs  mock_source.rs  mod.rs  xinput_source.rs
src-tauri/src/usecase/: input_monitor.rs  mod.rs  monitor.rs  monitor.rs.bak  session_manager.rs  state_publisher.rs  switch_operations.rs  test_helpers.rs  tests_monitor.rs  tests_monitor_service.rs  tests_session_logic.rs
src-tauri/src/usecase/monitor/: command_handler.rs  commands.rs  game_session.rs  input_processing.rs  loop_state.rs  mod.rs  publishing.rs
src-ui/: .eslintrc.json  overlay.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  constants.ts
src-ui/src/hooks/: useTauriStore.ts
src-ui/src/overlay/: main.ts  (+1 more)
src/domain/: errors.rs  interfaces.rs  mod.rs  models.rs  presets.rs
src/infrastructure/: input_source.rs  mod.rs  persistence.rs
src/interface/: gui.rs
src/usecase/: input_monitor.rs  mod.rs  monitor.rs  tests_monitor.rs
(+16 files in other folders)
