[package]
name = "switch_life_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
simplelog = "0.12.2"
sysinfo = "0.37.2"
tempfile = "3.24.0"
thiserror = "2.0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_XboxController", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Time", "Win32_System_Threading", "Win32_Media"] }

[target.x86_64-pc-windows-msvc.dependencies]
windows-result = "0.4.1"
