[package]
name = "switch_life_manager"
version = "0.1.0"
description = "IIDX Controller Life Manager"
authors = ["kkana6624"]
edition = "2021"
default-run = "switch_life_manager"

[lib]
name = "switch_life_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1.7.1"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
directories = "6.0.0"
gilrs = "0.11.0"
log = "0.4.29"
serde_with = "3.16.1"
simplelog = "0.12.2"
sysinfo = "0.37.2"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_XboxController", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Time", "Win32_System_Threading", "Win32_Media"] }

[target.x86_64-pc-windows-msvc.dependencies]
windows-result = "0.4.1"
